- Improvement: Warning of unused parameters removed.
- Improvement: Some SQL queries optimized for speed.
- Improvement: Optimized the way log files are exported to online services.
- UI: Removed the locator, TX Freq and RX freq widgets from the Satellite tab. (Closes #534, 535, #536)
- UI: Shows the total number of QSOs when exporting.
- Removed the callsign from the http header when checking for a new version.

TODO: - New Feature: New stat: DXCC per band (worked/confimed)  -  DataProxy_SQLite::getDXCCInBand
TODO: Test LoTW Export

TEST: Bug: Export all in macOS opens another "empty" windows while exporting.
TEST: Bug: When uploading to LoTW, no calls are shown.
TODO: Right-click in a DXCC spot to send to QRZ.com
TODO: Uncomment the line to remove the old config UpdateSettings::updateFile()    //return file.remove();

AdifLoTWExportWidget shows ALL logs not only the current one
When a new QSO is added, the numbers in awardswidget are not updated

eLog: LoTW, check if credentials are migrated in the settings update
LoTW is not uploading QSOs?

Export ADIF (not all) shows right QSOs in the current log but does not create a file



TODO: remove slotADIFExportSelection and the export functions


Oct 2022 - 2.3
- Improvement: Code optimization (TNX JohnS0819)
    https://github.com/ea4k/klog/pull/485
- Bugfix: Calls like EA4K/P were not identified as EA.
- Bugfix: Adding DXCluster servers was failing. (Closes #492) (TNX EA7IXM)
- Bugfix: When accepting changes on Settings, the settings were being readed twice, causing errors an delays. (Closes #495)
- Bugfix: QSOS with a lotw_qsl_sent status as NULL where not identified when queuing QSOs for LoTW. (closes #514)
- Improvement: Added the modes and propagation modes of ADIF  3.1.3 (Closes #509, #510)
- Improvement UI: Freq & RST labels have been reorganized for clarity.
- Improvement: Windows package updated to hamlib 4.4.
- Improvement: Minor UI changes in the Setup->misc tab.